# amc-petri-nets

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  makefile
pnml/: cycle_4.pnml  example.pnml  self.pnml  split.pnml
src/: CMakeLists.txt  bdd.cpp  bdd.h  closure.cpp  closure.h  ctl.cpp  ctl.h  ctl_test.h  main.cpp  pnml.cpp  pnml.h
